# iolaa

./: .env  .gitignore  Cargo.toml  README.md
data/: urls.txt
src/: main.rs
src/commands/: math.rs  meta.rs  mod.rs  player.rs  urls.rs
src/commands/utils/: mod.rs
