[package]
name = "iolaa"
version = "0.1.0"
authors = ["Rayerdyne <francois.straet@gmail.som>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2" # needed so intrument works with async functions.

[dependencies.tokio]
version = "0.2"
features = ["macros", "signal"]

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity.git"
branch = "v0.9.x"
# version = "0.9"
default-features = false
features = ["client", "cache", "standard_framework", "default_native_tls"]
# features = ["framework", "standard_framework"]