[package]
name = "iolaa"
version = "0.1.0"
authors = ["Rayerdyne <francois.straet@gmail.som>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2" # needed so intrument works with async functions.
lazy_static = "1.4.0"

[dependencies.tokio]
version = "0.2"
features = ["macros", "signal"]

[dependencies.serenity]
version = "0.9.0-rc.4"
default-features = false
features = ["client", "gateway", "model", "voice", "cache", "standard_framework", "native_tls_backend"]

[dependencies.lavalink-rs]
git = "https://gitlab.com/nitsuga5124/lavalink-rs/"
branch = "master"


# previously: 
# [dependencies.serenity]
# git = "https://github.com/serenity-rs/serenity"
# rev = "fd6f08b7ca8239cd4c17865b023cb06867c1ff98"
# # branch = "next"
# # version = "0.9"
# default-features = false
# features = ["client", "cache", "standard_framework", "voice", "native_tls_backend"]
# # features = ["framework", "standard_framework"]

# [dependencies.songbird]
# git = "https://github.com/serenity-rs/serenity"
# rev = "fd6f08b7ca8239cd4c17865b023cb06867c1ff98"
# # branch = "next"
# # default-features = false
# # features = ["serenity-native", "gateway"]